--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </li>
             <li>
-                <button id="lang-toggle">🇬🇧 EN</button> <!-- Default shows switch to EN -->
+                <button id="lang-toggle">🇨🇦 EN</button> <!-- Default shows switch to EN -->
             </li>
         </ul>
     </nav>
