Change language toggle button from UK to CA flag

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 </div>
             </li>
             <li>
-                <button id="lang-toggle">🇬🇧 EN</button>
+                <button id="lang-toggle">🇨🇦 EN</button>
             </li>
         </ul>
     </nav>
